<resources>
    <string name="app_name">My Application</string>
    <string name="Signin">Sign In</string>
    <string name="phone">Phone</string>
    <string name="pass">Password</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="fullName">Full Name</string>
    <string name="cnic">CNIC</string>
    <string name="scanned">CNIC Scanned Copy</string>
    <string name="upload">Upload</string>
    <string name="welcomeMSG">Welcome to Home Service</string>
    <string name="intro">Needs any type of home service at very reasonable fixed rate?</string>
    <string name="intro2">DON\'T WORRY YOU ARE AT THE RIGHT PLACE.</string>
    <string name="intro3">Here are some services that we provide.</string>
    <string name="needUrgent">Need Urgent home service now? don\'t worry  you just Book A Helper by one tap.</string>
    <string name="bookahelper">Book A Helper</string>
    <string name="needajob">Need a job? You can  provide  services  as a helper too.</string>
    <string name="getajob">Get A Job</string>
    <string name="ourcharges">Our Charges</string>
    <string name="services">Services</string>
    <string name="cleaner">Cleaner</string>
    <string name="get_service">Get Service</string>
    <string name="laundary">Laundary</string>
    <string name="utensil">Utensil Washing</string>
    <string name="baby_sitter">Baby Sitter</string>
    <string name="patient_care">Patient Care</string>
    <string name="plumber">Plumber</string>
    <string name="electrition">Electrition</string>
    <string name="select">Select</string>
    <string name="startServices">Start Services</string>
    <string name="selectpreferable">Select Preferable Timings</string>
    <string name="done">Done</string>
    <string name="title_activity_user_register">UserRegisterActivity</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="admin_pannel">Admin Pannel</string>
    <string name="view_users">Users</string>
    <string name="view_helpers">Helpers</string>
    <string name="notification">Notification</string>
    <string name="timing">Timing</string>
    <string name="view_requests">View Requests</string>
    <string name="request_msg">Request Message</string>
    <string name="view_request">View Request</string>
    <string name="assign_helper">Assign a Helper</string>
    <string name="available_helpers">Available Helpers</string>
    <string name="view_details">View Details</string>
    <string name="assign">Assign</string>
    <string name="homeServices">Home Services</string>
    <string name="charges">Charges:</string>
    <string name="problemsolver">Problem Solvers</string>
    <string name="caretackers">Care Takers</string>
    <string name="Housekeeping">House keeping materials should be provided by the house keepers.</string>
    <string name="desciption">Description</string>

</resources>
