<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.synnapps.carouselview.CarouselView
            android:id="@+id/carouselView"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            app:fillColor="#FFFFFF"
            app:pageColor="@android:color/transparent"
            app:radius="6dp"
            app:slideInterval="3000"
            app:strokeColor="#FF777777"
            app:strokeWidth="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="#A6665EFF"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/welcomeMSG"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/intro"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/intro2"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/intro3"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/textCarousal"
            android:layout_below="@+id/carouselView"
            android:background="#404040"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/imageTextHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffff"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text="Electrition"/>
            <TextView
                android:id="@+id/imageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffff"
                android:textSize="20sp"
                android:text="Electrition is very nice"/>
        </LinearLayout>



        <RelativeLayout
            android:layout_below="@+id/textCarousal"
            android:layout_width="match_parent"
            android:layout_height="500dp">

        <LinearLayout
            android:id="@+id/leftview"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="#665EFF"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/leftview"
            android:layout_toRightOf="@+id/leftview"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/needUrgent"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/bookHelper"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_button"
                android:text="@string/bookahelper"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/needajob"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/getJob"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_button"
                android:text="@string/getajob"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/ourCharges"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_button"
                android:text="@string/ourcharges"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/services"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_button"
                android:text="@string/serives"
                android:textColor="@android:color/white" />

        </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>