<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#5574F7"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/view_details"
            android:layout_toLeftOf="@+id/view_details">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:textStyle="bold"
                android:text="@string/fullName"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/name">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                android:text="Phone   : "
                android:textColor="@android:color/white"
                android:textSize="18sp" />
                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="5dp"
                    android:text="@string/phone"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"></TextView>

            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/view_details"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_toStartOf="@+id/assign"
            android:layout_toLeftOf="@+id/assign"
            android:background="@drawable/custom_border"
            android:text="@string/view_details"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/assign"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/custom_border"
            android:text="@string/assign"
            android:textColor="@color/colorPrimaryDark" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>