<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <TextView
        android:id="@+id/ourcharges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ourcharges"
        android:textSize="35sp" />

    <androidx.cardview.widget.CardView
        android:layout_marginTop="15dp"
        android:id="@+id/homeService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ourcharges"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:padding="15dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="@string/homeServices"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_below="@+id/title"
                android:id="@+id/charges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="@string/charges"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:layout_marginTop="15dp"
                android:layout_below="@+id/charges"
                android:id="@+id/getService"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/custom_button_blue"
                android:text="@string/get_service"
                android:textColor="#ffff" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="15dp"
        android:id="@+id/caretakers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homeService"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:padding="15dp">

            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="@string/caretackers"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_below="@+id/title2"
                android:id="@+id/charges2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="@string/charges"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:layout_marginTop="15dp"
                android:layout_below="@+id/charges2"
                android:id="@+id/getService2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/custom_button_blue"
                android:text="@string/get_service"
                android:textColor="#ffff" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="15dp"
        android:id="@+id/problemsolvers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/caretakers"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:padding="15dp">

            <TextView
                android:id="@+id/title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="@string/problemsolver"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_below="@+id/title3"
                android:id="@+id/charges3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="@string/charges"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:layout_marginTop="15dp"
                android:layout_below="@+id/charges3"
                android:id="@+id/getService3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/custom_button_blue"
                android:text="@string/get_service"
                android:textColor="#ffff" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_marginTop="20dp"
        android:text="@string/Housekeeping"
        android:textSize="20sp"
        android:layout_below="@id/problemsolvers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>